production/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
spec:
  host: gitea.home.mburnsfire.net
  to:
    kind: Service
    name: gitea-http
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
